[project]
name = "pytest-plone"
dynamic = ["version"]
description = "Pytest plugin to test Plone addons"
readme = "README.md"
license = "GPL-2.0-only"
requires-python = ">=3.10"
authors = [
    { name = "Érico Andrei", email = "ericof@plone.org" },
]
keywords = [
    "CMS",
    "Plone",
    "Pytest",
    "Testing",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Plone",
    "Framework :: Plone :: 6.0",
    "Framework :: Plone :: 6.1",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "pytest<8.0.0",
    "zope.pytestlayer",
    "plone.api",
    "plone.app.testing",
    "plone.base",
    "plone.browserlayer",
    "plone.dexterity",
    "Products.CMFPlone[test]",
    "zope.component",
    "zope.schema",
]

[project.optional-dependencies]
test = [
    "pytest-cov",
    "pytest-xdist",
    "mypy>=1.15.0",
    "towncrier>=23.11.0",
    "zest-releaser[recommended]>=9.1.3",
    "zestreleaser-towncrier>=1.3.0",
]

[project.urls]
Homepage = "https://github.com/collective/pytest-plone"
PyPI = "https://pypi.org/project/pytest-plone"
Source = "https://github.com/collective/pytest-plone"
Tracker = "https://github.com/collective/pytest-plone/issues"


[project.entry-points.pytest11]
plone = "pytest_plone.fixtures"

[tool.uv]
managed = false

[tool.hatch.version]
path = "src/pytest_plone/__init__.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
strict-naming = true

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pytest_plone"]

[tool.towncrier]
directory = "news/"
filename = "CHANGELOG.md"
start_string = "<!-- towncrier release notes start -->\n"
title_format = "## {version} ({project_date})"
template = "news/.changelog_template.jinja"
issue_format = "[#{issue}](https://github.com/collective/pytest-plone/issues/{issue})"
underlines = ["", "", ""]

[[tool.towncrier.type]]
directory = "breaking"
name = "Breaking changes:"
showcontent = true

[[tool.towncrier.type]]
directory = "feature"
name = "New features:"
showcontent = true

[[tool.towncrier.type]]
directory = "bugfix"
name = "Bug fixes:"
showcontent = true

[[tool.towncrier.type]]
directory = "internal"
name = "Internal:"
showcontent = true

[[tool.towncrier.type]]
directory = "documentation"
name = "Documentation:"
showcontent = true

[[tool.towncrier.type]]
directory = "tests"
name = "Tests"
showcontent = true

[tool.ruff]
target-version = "py310"
line-length = 88
fix = true
lint.select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
]
lint.ignore = [
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.lint.isort]
case-sensitive = false
no-sections = true
force-single-line = true
from-first = true
lines-after-imports = 2
lines-between-types = 1
order-by-type = false

[tool.ruff.format]
preview = true

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501", "RUF001", "S101"]

[tool.pytest.ini_options]
addopts = "-nauto"
testpaths = ["tests"]

[tool.coverage.run]
source_pkgs = ["pytest_plone", "tests"]
branch = true
parallel = true

[tool.mypy]
ignore_missing_imports = true

[tool.zest-releaser]
python-file-with-version = "src/pytest_plone/__init__.py"
